@@ -48,7 +48,7 @@
     <li><a href="./option_mirror.html">mirror</a> - Apply a mirror transformation</li>
     <li><a href="./option_options.html">options</a> - Apply options read from a file</li>
     <li><a href="./option_orient.html">orient</a> - Change the crystallographic orientation of the system</li>
-    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Find a suitable equivalent orthogonal cell</li>
+    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Find a suitable equivalent orthogonal cell <abbr title="This option is parallelized">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./option_properties.html">properties</a> - Set properties of the system</li>
     <li><a href="./option_rebox.html">rebox</a> - Try to guess supercell parameters</li>
     <li><a href="./option_rmatom.html">remove-atom</a> - Remove one or several atoms</li>
@@ -87,7 +87,7 @@
     <li><a href="./mode_merge.html">Merge</a> - Merge two or more systems into one</li>
     <li><a href="./mode_normal.html">Normal</a> - Convert a file to one or many formats</li>
     <li><a href="./mode_oneinall.html">One-in-all</a> - Convert one file containing several snapshots to several files</li>
-    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Create a polycrystal using Voronoi method</li>
+    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Create a polycrystal using Voronoi method <abbr title="This mode is parallelized">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./mode_unwrap.html">Unwrap</a> - Unwrap atom coordinates</li>
   </ul></li>
 
@@ -96,7 +96,7 @@
     <li><a href="./progbe_ig.html">ignore</a> - Always ignore existing files</li>
     <li><a href="./progbe_lang.html">language</a> - Set language of messages</li>
     <li><a href="./progbe_log.html">logfile</a> - Set up log file name</li>
-    <li><a href="./progbe_Nthreads.html">nthreads</a> - Set number of OpenMP threads</li>
+    <li><a href="./progbe_Nthreads.html">nthreads</a> - Set number of OpenMP parallel threads</li>
     <li><a href="./progbe_ow.html">overwrite</a> - Always overwrite existing files</li>
     <li><a href="./progbe_verb.html">verbosity</a> - Set verbosity level</li>
   </ul></li>
