@@ -33,7 +33,7 @@
     <li><a href="./mode_merge.html">Merge</a> - Merge two or more systems into one</li>
     <li><a href="./mode_normal.html">Normal</a> - Convert a file to one or many formats</li>
     <li><a href="./mode_oneinall.html">One-in-all</a> - Convert one file containing several snapshots to several files</li>
-    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Create a polycrystal using Voronoi method</li>
+    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Create a polycrystal using Voronoi method <abbr title="This option is parallelized">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./mode_unwrap.html">Unwrap</a> - Unwrap atom coordinates</li>
 </ul>
 
@@ -43,7 +43,7 @@
 
 <ul>
     <li><a href="./mode_centrosymm.html">Central symmetry</a> - Compute the central symmetry parameter for each atom</li>
-    <li><a href="./mode_density.html">Density</a> - Compute the density of a property</li>
+    <li><a href="./mode_density.html">Density</a> - Compute the density of a property <abbr title="This mode is parallelized">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./mode_difference.html">Difference</a> - Compute the difference in atomic positions between two files</li>
     <li><a href="./mode_edm.html">Electric dipole moments</a> - Compute individual electric dipole moments</li>
     <li><a href="./mode_epola.html">Electronic polarization</a> - Compute polarization of ions in core-shell model</li>
