@@ -32,6 +32,7 @@
 
 <p>It is recommended to call this option <em>before</em> duplicating the system with the option "-duplicate". Note that in certain conditions (for instance, if the initial box vectors form very small angles with Cartesian axes), then Atomsk may fail to find a suitable set of orthogonal vectors.</p>
 
+<p>This option is parallelized with OpenMP. To control the number of parallel threads used by Atomsk, you may use the <a href="./progbe_Nthreads.html">option <code>-nthreads</code></a>.</p>
 
 
 <h4>Default</h4>
