@@ -47,7 +47,7 @@
     <li><a href="./option_mirror.html">mirror</a> - Apply a mirror transformation</li>
     <li><a href="./option_options.html">options</a> - Apply options read from a file</li>
     <li><a href="./option_orient.html">orient</a> - Change the crystallographic orientation of the system</li>
-    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Find a suitable equivalent orthogonal cell</li>
+    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Find a suitable equivalent orthogonal cell <abbr title="This option is parallelized">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./option_properties.html">properties</a> - Set properties of the system</li>
     <li><a href="./option_rebox.html">rebox</a> - Try to guess supercell parameters</li>
     <li><a href="./option_rmatom.html">remove-atom</a> - Remove one or several atoms</li>
