@@ -48,7 +48,7 @@
     <li><a href="./option_mirror.html">mirror</a> - Appliquer une transformation miroir</li>
     <li><a href="./option_options.html">options</a> - Appliquer les options écrites dans un fichier</li>
     <li><a href="./option_orient.html">orient</a> - Changer l'orientation crystallographique</li>
-    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Trouver une boîte orthogonale équivalente</li>
+    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Trouver une boîte orthogonale équivalente <abbr title="Cette option est parallélisée">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./option_properties.html">properties</a> - Définir des propriétés du système</li>
     <li><a href="./option_rebox.html">rebox</a> - Tente de déterminer les vecteur de boîte</li>
     <li><a href="./option_rmatom.html">remove-atom</a> - Supprimer un ou plusieurs atomes</li>
@@ -87,7 +87,7 @@
     <li><a href="./mode_merge.html">Merge</a> - Joindre deux ou plusieurs systèmes en un seul</li>
     <li><a href="./mode_normal.html">Normal</a> - Convertir un fichier vers un ou plusieurs formats</li>
     <li><a href="./mode_oneinall.html">One-in-all</a> - Convertir un fichier contenant plusieurs systèmes vers plusieurs fichiers</li>
-    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Créer un polycristal avec la méthode de Voronoi</li>
+    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Créer un polycristal avec la méthode de Voronoi <abbr title="Ce mode est parallélisé">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./mode_unwrap.html">Unwrap</a> - Déballer les coordonnées atomiques</li>
   </ul></li>
 
@@ -96,7 +96,7 @@
     <li><a href="./progbe_ig.html">ignore</a> - Toujours ignorer les fichiers existants</li>
     <li><a href="./progbe_lang.html">language</a> - Définir la langue des messages</li>
     <li><a href="./progbe_log.html">logfile</a> - Définir le nom du fichier journal</li>
-    <li><a href="./progbe_Nthreads.html">nthreads</a> - Définir le nombre de processus OpenMP</li>
+    <li><a href="./progbe_Nthreads.html">nthreads</a> - Définir le nombre de processus parallèles OpenMP</li>
     <li><a href="./progbe_ow.html">overwrite</a> - Toujours écraser les fichiers existants</li>
     <li><a href="./progbe_verb.html">verbosity</a> - Définir le niveau de verbosité</li>
   </ul></li>
