@@ -33,7 +33,7 @@
     <li><a href="./mode_merge.html">Merge</a> - Joindre deux ou plusieurs systèmes en un seul</li>
     <li><a href="./mode_normal.html">Normal</a> - Convertir un fichier vers un ou plusieurs formats</li>
     <li><a href="./mode_oneinall.html">One-in-all</a> - Convertir un fichier contenant plusieurs systèmes vers plusieurs fichiers</li>
-    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Créer un polycristal avec la méthode de Voronoi</li>
+    <li><a href="./mode_polycrystal.html">Polycrystal</a> - Créer un polycristal avec la méthode de Voronoi <abbr title="Ce mode est parallélisé">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./mode_unwrap.html">Unwrap</a> - Déballer les coordonnées atomiques</li>
 </ul>
 
@@ -42,7 +42,7 @@
 
 
 <ul>
-    <li><a href="./mode_density.html">Densité</a> - Calculer la densité d'une propriété</li>
+    <li><a href="./mode_density.html">Densité</a> - Calculer la densité d'une propriété <abbr title="Ce mode est parallélisé">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./mode_difference.html">Difference</a> - Calculer la difference entre les positions atomiques de deux configurations</li>
     <li><a href="./mode_edm.html">Electric dipole moments</a> - Calculer des moments dipolaires électriques</li>
     <li><a href="./mode_epola.html">Electronic polarization</a> - Calculer la polarisation ionique dans un modèle ionique c&oelig;ur-coquille</li>
