@@ -32,6 +32,8 @@
 
 <p>Il est recommandé d'appeler cette option <em>avant</em> de dupliquer le système avec l'option "-duplicate". Notez que dans certaines conditions (par exemple si les vecteurs de boîte initiaux forment un angle très petit avec les axes cartésiens), alors Atomsk peut échouer à trouver une boîte orthogonale équivalente.</p>
 
+<p>Cette option est parallélisée avec OpenMP. Pour contrôler le nombre de processus utilisés par Atomsk, vous pouvez utiliser l'<a href="./progbe_Nthreads.html">option <code>-nthreads</code></a>.</p>
+
 
 
 <h4>Défaut</h4>
