@@ -47,7 +47,7 @@
     <li><a href="./option_mirror.html">mirror</a> - Appliquer une transformation miroir</li>
     <li><a href="./option_options.html">options</a> - Appliquer les options écrites dans un fichier</li>
     <li><a href="./option_orient.html">orient</a> - Changer l'orientation crystallographique</li>
-    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Trouver une boîte orthogonale équivalente</li>
+    <li><a href="./option_orthocell.html">orthogonal-cell</a> - Trouver une boîte orthogonale équivalente <abbr title="Cette option est parallélisée">(P<sup>&par;</sup>)</abbr></li>
     <li><a href="./option_properties.html">properties</a> - Définir des propriétés du système</li>
     <li><a href="./option_rebox.html">rebox</a> - Tente de déterminer les vecteur de boîte</li>
     <li><a href="./option_rmatom.html">remove-atom</a> - Supprimer un ou plusieurs atomes</li>
